# evernote-py3

./: README.md  pyproject.toml
lib/evernote/: __init__.py
lib/evernote/api/: client.py
